tests/syntactic/syntax1/syntax1.err
Error: syntax error, unexpected + in file syntax1.dl at line 13
                    reachable(Z,Y). +
------------------------------------^-
1 errors generated, evaluation aborted
